--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://bernicekjy.github.io/3d-personal-portfolio/
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
